[tool.poetry]
name = "dagster-university"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
dagster = "^1.5.4"
urllib3 = "<2.0.0"

[tool.poetry.group.dev.dependencies]
dagit = "^1.5.4"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_university"
